# agentlang-index

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md
.github/workflows/: bench-tests.yml  harness-tests.yml  verify-refs.yml
bench/: .gitignore  aggregate.ts  export-dataset.ts  runner.test.ts  runner.ts  synth-summary.ts
bench/results/: dashboard.json
corpus/: scaffolds.json
corpus/000-hello-stdout/: Cargo.toml  go.mod  notes.md  prompt.md  ref.0  ref.go  ref.py  ref.rs  ref.ts  ref.zero  spec.json  verify.sh
corpus/001-fibonacci-memoized/: Cargo.toml  go.mod  notes.md  prompt.md  ref.0  ref.go  ref.py  ref.rs  ref.ts  ref.zero  spec.json  verify.sh
corpus/002-sieve-prime-count/: Cargo.toml  notes.md  prompt.md  ref.0  ref.go  ref.py  ref.rs  ref.ts  ref.zero  spec.json  verify.sh
corpus/003-levenshtein-distance/: Cargo.toml  go.mod  notes.md  prompt.md  ref.0  ref.go  ref.py  ref.rs  ref.ts  ref.zero  spec.json  verify.sh
corpus/004-matrix-multiply/: go.mod  (+11 more)
docs/: architecture.md
harness/: README.md  pyproject.toml
harness/src/agentlang_harness/: __init__.py  __main__.py  agent_loop.py  cli.py  prompt.py  runner.py  scratch.py  types.py  verify.py
harness/src/agentlang_harness/providers/: __init__.py  claude_cli.py  openai_compatible.py
harness/src/agentlang_harness/storage/: __init__.py  sqlite.py
harness/tests/: test_agent_loop.py  test_claude_cli.py  test_openai_compatible.py  test_providers.py  test_runner_dry.py  test_scaffolds.py  test_storage.py  test_verify.py
harness/tests/fixtures/agent_loop_mock/000-hello-stdout/: python.txt
(+1383 files in other folders)
