[project]
name = "agentlang-harness"
version = "0.1.0"
description = "AgentLang Index benchmark harness — orchestrates one-shot and agent-loop runs, stores results in SQLite."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlang_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
